# canvas-mcp-editor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: full-verification.yml
apps/server/: package.json
apps/web/: package.json  vite.config.ts
crates/collab-relay/: Cargo.toml
crates/editor-core/: Cargo.toml
crates/editor-core/bindings/: CodeComponentMapping.ts  CodeComponentMappingImportMode.ts  CodeComponentMappingProp.ts  CodeComponentMappingPropType.ts  CodeComponentMappingSourceField.ts  CodeComponentMappingVariantProp.ts  ComponentDefinition.ts  ComponentInstance.ts  ComponentOverride.ts  ComponentProperty.ts  ComponentVariant.ts  DesignFile.ts  DesignStyleType.ts  DesignToken.ts  DesignTokenSet.ts  DesignTokenType.ts  HorizontalConstraint.ts  LayoutAlignContent.ts  LayoutDirection.ts  LayoutJustifyItems.ts  LayoutMode.ts  LayoutPadding.ts  LayoutSizing.ts  LayoutSpacingTokens.ts  LayoutWrap.ts  Node.ts  NodeConstraints.ts  NodeContent.ts  NodeLayout.ts  NodeLayoutItem.ts  Style.ts  VerticalConstraint.ts
crates/editor-core/src/: commands.rs  geometry.rs  lib.rs  model.rs
crates/editor-core/tests/: commands_and_context.rs  document_model.rs
crates/editor-wasm/: Cargo.toml
deploy/collab-relay/: .env.example  docker-compose.yml
docs/: PROJECT_BRIEF.md
docs/deployment/: collaboration.md
docs/process/: minimal-change-ladder.md  penpot-maturity-loop.md
docs/product/: figma-core-interaction-rules.md  (+4 more)
scripts/: check-deployment-artifacts.test.mjs  check-penpot-maturity.test.mjs
(+130 files in other folders)
