[package]
name = "editor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = { version = "11", features = ["uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
